syntax = "proto3";

package api.cart;

option go_package = "CartService/api/cart;cart";
option java_multiple_files = true;
option java_package = "api.cart";

service CartService {
	rpc AddItem(AddItemReq) returns (AddItemResp) {}
	rpc UpdateItem(UpdateItemReq) returns (UpdateItemResp) {}
	rpc GetCart(GetCartReq) returns (GetCartResp) {}
	rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
}

message CartItem {
	uint32 product_id = 1;
	int32  quantity = 2;
}

// AddItem 接口请求返回结构
message AddItemReq {
	uint32 user_id = 1;
	CartItem item = 2;
}

message AddItemResp {
	bool State = 1;
}

// UpdateItem 接口请求返回结构
message UpdateItemReq {
	uint32 user_id = 1;
	CartItem item = 2;
}

message UpdateItemResp {
	bool State = 1;
}


// EmptyCart 接口请求返回结构
message EmptyCartReq {
	uint32 user_id = 1;
}
message EmptyCartResp {
	bool State = 1;
}

// GetCart 接口请求返回结构
message GetCartReq {
	uint32 user_id = 1;
}

message GetCartResp {
	uint64 total = 1;
	repeated CartItem items = 2;
}
