syntax = "proto3";

package api.checkout;

option go_package = "checkout_system/api/checkout;checkout";

service CheckoutService {
  // 结算订单
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}


message CartItem {
  uint64 product_id = 1;
  float price = 2;
  uint32 quantity = 3;
}

// 支付方式枚举
//enum PaymentMethod {
//  PAYMENT_METHOD_UNSPECIFIED = 0;
//  CREDIT_CARD = 1;     // 信用卡
//  ALIPAY = 2;          // 支付宝
//  WECHAT_PAY = 3;      // 微信支付
//}




message Product {
  uint64 product_id = 1;
  string name = 2;
  string picture_url = 3;
  float price = 4;
  bool is_stock_sufficient = 5;
}

// 获取结算单
message CheckoutReq {
  repeated CartItem cart_items = 5;
}

message CheckoutResp {
  // 商品信息(更新后的商品详细信息)
  repeated Product products = 1;

  // 商品价格是否改变了
  bool has_changed = 2;
  // 订单总价
  float total_price = 3;
  // 实付价格
  float actual_price = 4;
  // 运费
  float shipping_fee = 5;
  // 是否免除运费
  bool is_free_shipping = 6;
}
